test/corpus/0002_directives.txt
================================================================================
directives
================================================================================
.set A, '\n
.set MY_CONST, 0xff
.global _start
.ascii "hello world\n"
.global a/*a*/
.global b#b
.global c #c
.global d /*d*/
.global e   /*e*/  /*eee*/ 
.global f/*f*/  /*ff*//*fff*/  #ffff
.global g/*
g
*/
.global h
--------------------------------------------------------------------------------
(source_file
  (directive
    (directive_name)
    (directive_arg
      (symbol))
    (directive_arg
      (char)))
  (directive
    (directive_name)
    (directive_arg
      (symbol))
    (directive_arg
      (number)))
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (directive
    (directive_name)
    (directive_arg
      (string)))
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (comment)
  (comment)
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol)))
  (comment)
  (directive
    (directive_name)
    (directive_arg
      (symbol))))
